# skylattice

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  early_feedback.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
apps/web/: .env.example  README.md  eslint.config.mjs  package.json
configs/agent/: defaults.yaml
configs/policies/: budgets.yaml  governance.yaml
configs/radar/: adoptions.yaml  promotion.yaml  providers.yaml  schedule.yaml  scoring.yaml  sources.yaml
configs/task/: validation.yaml
docs/: ai-distribution-ops.md  ai-search-benchmark.md  app-preview.md  architecture.md  blueprint-v0.1.md  comparison.md  evolution-loop.md  faq.md  github-workflow.md  governance.md  index.md  llms-full.txt  llms.txt  memory-model.md  overview.md  proof.md  quickstart.md  radar-scheduling.md  roadmap.md  robots.txt  sitemap.xml  technology-radar.md  use-cases.md  web-control-plane.md  what-is-skylattice.md
docs/adrs/: 0001-system-direction.md  0002-task-agent-mvp.md  0003-technology-radar.md  0004-deterministic-text-edit-primitives.md  0005-review-driven-memory-operations.md  0006-resume-safe-external-sync.md  0007-tracked-validation-envelope.md  0008-non-destructive-repo-ops.md  0009-github-sync-context-and-preflight.md  0010-explicit-destructive-repo-approval.md  0011-github-collaboration-sync-hardening.md  0012-local-scheduler-and-radar-source-abstraction.md  0013-tracked-radar-provider-contract.md  0014-provider-neutral-radar-identity.md  0015-provider-neutral-adoption-matching.md  0016-normalized-radar-evidence-taxonomy.md  (+2 more)
docs/outreach/: launch-en.md  (+7 more)
overrides/: main.html
skills/: README.md
tests/: conftest.py  test_actions_github.py  test_actions_gitlab.py  test_hosted_alpha_readiness.py  test_memory.py  test_provider.py  test_public_readiness.py  test_radar.py  test_smoke.py  test_social_preview_upload_tool.py  test_web_bridge.py  test_web_cli.py  test_web_preview_proof.py
tools/: bootstrap_hosted_alpha_db.mjs  check_hosted_alpha_first_run_local.py  check_hosted_alpha_setup.mjs  check_web_connector_recovery_local.py  check_web_connector_roundtrip_local.py  check_web_control_cockpit_ui.py  check_web_local_proof_suite.py  check_web_preview_state.py  run_authenticated_smoke.py  run_validation_suite.py  run_web_preview.py  upload_github_social_preview.py
(+207 files in other folders)
