[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skylattice"
version = "0.3.1"
description = "Local-first AI agent runtime for persistent memory, governed repo tasks, and Git-native self-improvement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "PyYAML>=6.0,<7.0",
]

[project.urls]
Homepage = "https://yscjrh.github.io/skylattice/"
Documentation = "https://yscjrh.github.io/skylattice/"
Repository = "https://github.com/YSCJRH/skylattice"
Issues = "https://github.com/YSCJRH/skylattice/issues"
Changelog = "https://github.com/YSCJRH/skylattice/blob/main/CHANGELOG.md"

[project.optional-dependencies]
automation = [
  "playwright>=1.52,<2.0",
]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1.0",
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.6,<10.0",
]

[project.scripts]
skylattice = "skylattice.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
